Add configuration for Kotlin static code analyser.
Adde `idea` files, added plugin to maven and ignored `*.iml` files.